<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/lytTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launcher"
            android:id="@+id/imageView2" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_below="@+id/lytTop"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/pad_margin_10dp"
        android:layout_marginRight="@dimen/pad_margin_10dp"
        android:orientation="vertical">

        <com.kannadachristianwallpapers.app.view.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/info_us"
            android:textColor="@color/black"
            android:id="@+id/phenomenaTextView" />

        <com.kannadachristianwallpapers.app.view.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_margin_10dp"
            android:text="Facebook"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <com.kannadachristianwallpapers.app.view.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_facebook"
            android:textColor="@color/black"/>
        <com.kannadachristianwallpapers.app.view.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_margin_10dp"
            android:text="Youtube"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <com.kannadachristianwallpapers.app.view.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_youtube"
            android:textColor="@color/black"/>
        <com.kannadachristianwallpapers.app.view.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_margin_10dp"
            android:text="E-mail"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <com.kannadachristianwallpapers.app.view.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_email"
            android:textColor="@color/black"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>
